<resources>
    <string name="app_name">InternetShop</string>
    <string name="auth_failed">SignIn failed</string>
    <string name="title_activity_general">GeneralActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <!--nav drawer strings-->
    <string name="basket">Basket</string>
    <string name="favors">Favorites</string>
    <string name="orders">My orders</string>
    <string name="settings">User settings</string>
    <string name="logout">Log out</string>
    <string name="more">SHOW MORE</string>
    <string name="main_page">Main page</string>

    <string name="available">Product available</string>
    <string name="unavailable">Product unavailable</string>
    <string name="product_added_to_basket">Product added to basket</string>
    <string name="product_removed_from_basket">Product removed from basket</string>
    <string name="product_added_to_fav">Product added to favorites</string>
    <string name="product_removed_from_fav">Product removed from favorites</string>
    <string name="description">Description</string>
    <string name="characteristics">Characteristics</string>
    <string name="reviews">Reviews</string>
    <string name="send">Send</string>
    <string name="give_feedback">Give feedback</string>
    <string name="input_your_review">Input your review...</string>
    <string name="rate_product">Please, rate product from 1 to 5</string>
    <string name="input_review">Please, input review</string>
    <string name="title_activity_basket">BasketActivity</string>
    <string name="your_basket">Your basket</string>
    <string name="your_favorites">Your favorites</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="added_in_your_basket">added in your basket</string>
    <string name="removed_from_your_favorites">removed from your favorites</string>
    <string name="make_order">Make an order</string>
    <string name="input_city">Input city</string>
    <string name="cash">Cash</string>
    <string name="payment_card">Payment card</string>
    <string name="select_warehouse">Select warehouse</string>
    <string name="city_of_destination">City of destination:</string>
    <string name="payment_method">Select payment method</string>
    <string name="select_all_options">Select all options</string>
    <string name="status_of_order">Status of order</string>
    <string name="count_of_products">Count of products</string>
    <string name="your_orders">Your orders</string>
    <string name="city">City</string>
    <string name="warehouse">Warehouse</string>
    <string name="kind_of_payment">Kind of payment</string>
    <string name="sort_by">Sort by</string>
    <string name="from_cheap_to_expensive">From cheap to expensive</string>
    <string name="from_expensive_to_cheap">From expensive to cheap</string>
    <string name="consumer_rating">Consumer rating</string>
    <string name="from_A_Z">From A to Z</string>
    <string name="from_Z_A">From Z to A</string>
    <string name="pay">Pay</string>
    <string name="issue_order">Issue order</string>
    <string name="requisites">Input your card requisites</string>
    <string name="hot_discounts">HOT DISCOUNTS!</string>
    <string name="reset_password">Reset password</string>
    <string name="email_sended">You have been sent a letter with further instructions.</string>
    <string name="apply_changes">Apply changes</string>
    <string name="account_setting">Account settings</string>
</resources>
