<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.entersnowman.internetshop.CategoryActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:srcCompat="@mipmap/ic_sort" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_of_all_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/slideView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:background="@color/primary_light"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="bottom"
            android:text="@string/sort_by" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sort_parameters">

            <RadioButton
                android:id="@+id/cheap_expensive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/from_cheap_to_expensive" />

            <RadioButton
                android:id="@+id/expensive_cheap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/from_expensive_to_cheap" />

            <RadioButton
                android:id="@+id/consumer_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/consumer_rating" />

            <RadioButton
                android:id="@+id/A_Z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/from_A_Z" />

            <RadioButton
                android:id="@+id/Z_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/from_Z_A" />
        </RadioGroup>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
