<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.entersnowman.internetshop.MakeOrderActivity">
<SearchView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/find_city"
></SearchView>

    <TextView
        android:id="@+id/spinner_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_warehouse"
        android:visibility="invisible"
        android:textSize="22sp"
        android:layout_below="@+id/finded_city"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Spinner
        android:id="@+id/warehouse_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinner_hint"
        android:visibility="invisible"/>

    <RadioGroup
        android:id="@+id/payment_method_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RadioButton
            android:id="@+id/cash_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cash" />

        <RadioButton
            android:id="@+id/payment_card_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/payment_card" />
    </RadioGroup>

    <Button
        android:id="@+id/make_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/make_order"
        android:layout_marginBottom="36dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textView"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/find_city"
        android:text="@string/city_of_destination" />

    <TextView
        android:id="@+id/finded_city"
        android:layout_margin="8dp"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/find_city"
        android:layout_toEndOf="@+id/textView"
        android:textColor="@color/primary_text"
        android:layout_toRightOf="@+id/textView"
 />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="22sp"
        android:visibility="invisible"
        android:text="@string/payment_method"
        android:layout_below="@+id/warehouse_spinner"
        android:layout_alignLeft="@+id/spinner_hint"
        android:layout_alignStart="@+id/spinner_hint" />


</RelativeLayout>
