<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:padding="2dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp"
    app:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dateOfOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textColor="@color/primary_text"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dateOfOrder"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/dateOfOrder"
                android:layout_alignStart="@+id/dateOfOrder"
                android:layout_below="@+id/dateOfOrder"
                android:layout_weight="1"
                android:text="@string/status_of_order"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/statusOfOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView6"
                android:layout_alignStart="@+id/textView6"
                android:layout_below="@+id/textView6"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/primary_dark"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout2"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/statusOfOrder"
                android:layout_alignStart="@+id/statusOfOrder"
                android:layout_below="@+id/statusOfOrder"
                android:layout_weight="1"
                android:text="@string/count_of_products"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/countOfProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView7"
                android:layout_alignStart="@+id/textView7"
                android:layout_below="@+id/textView7"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/primary_dark"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout3"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/countOfProducts"
                android:layout_alignStart="@+id/countOfProducts"
                android:layout_below="@+id/countOfProducts"
                android:layout_weight="1"
                android:text="@string/city"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView5"
                android:layout_alignStart="@+id/textView5"
                android:layout_below="@+id/textView2"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/primary_dark"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout4"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:layout_below="@+id/city"
                android:layout_weight="1"
                android:text="@string/warehouse"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/warehouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView5"
                android:layout_alignStart="@+id/textView5"
                android:layout_below="@+id/textView5"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/primary_dark"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout5"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/warehouse"
                android:layout_alignStart="@+id/warehouse"
                android:layout_below="@+id/warehouse"
                android:layout_weight="1"
                android:text="@string/kind_of_payment"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/payment_kind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView9"
                android:layout_alignStart="@+id/textView9"
                android:layout_below="@+id/textView9"
                android:layout_weight="1"
                android:text="TextView"
                android:textColor="@color/primary_dark"
                android:textSize="18sp" />
        </LinearLayout>


    </RelativeLayout>
</android.support.v7.widget.CardView>